// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`python-emitter byte-equivalence > crud client + types stable > crud client.py 1`] = `
"# ruff: noqa: E501
from __future__ import annotations

import threading
import httpx
from typing import Any
from ._runtime import (
    ClientConfig,
    _AuthState,
    _build_headers,
    _build_url,
    _do_request_async,
    _do_request_sync,
    _expand_path,
    _parse_body,
    _raise_for_status,
)
from ._invalidation import (
    _StaleTracker,
    _StaleTrackerSync,
)
from .types import (
    User,
    UserCreateInput,
    UserPatchInput,
)

_INVALIDATION_MAP: dict[str, dict[str, Any]] = {
}

class _UsersResource:
    def __init__(self, _client: "AsyncSDK") -> None:
        self._client = _client

    async def create(self, body: UserCreateInput,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> User:
        """Create user

        Raises:
            BadRequestError: HTTP 400
            UnprocessableEntityError: HTTP 422
        """
        _path = "/users"
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = None
        _selector = "POST " + _path
        _request_meta = await self._client._stale_tracker.build_request_meta(_selector, _path, "POST")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = await _do_request_async(
            self._client._async_client, self._client._config, "POST", _url,
            headers=_headers, json=body, timeout=timeout,
            cancel_token=cancel_token, operation="POST /users",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            await self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                await self._client._stale_tracker.clear_stale(_selector, _path, "POST", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")

    async def delete(self, id: str,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> None:
        """Delete user

        Raises:
            NotFoundError: HTTP 404
        """
        _path = _expand_path("/users/{id}", {"id": id})
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = {"id": id}
        _selector = "DELETE " + _path
        _request_meta = await self._client._stale_tracker.build_request_meta(_selector, _path, "DELETE")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = await _do_request_async(
            self._client._async_client, self._client._config, "DELETE", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="DELETE /users/{id}",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            await self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                await self._client._stale_tracker.clear_stale(_selector, _path, "DELETE", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "none")

    async def get(self, id: str,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> User:
        """Get user by id

        Raises:
            NotFoundError: HTTP 404
        """
        _path = _expand_path("/users/{id}", {"id": id})
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = {"id": id}
        _selector = "GET " + _path
        _request_meta = await self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = await _do_request_async(
            self._client._async_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /users/{id}",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            await self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                await self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")

    async def list(self,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> list[User]:
        """List users"""
        _path = "/users"
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = None
        _selector = "GET " + _path
        _request_meta = await self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = await _do_request_async(
            self._client._async_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /users",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            await self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                await self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")

    async def update(self, id: str, body: UserPatchInput,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> User:
        """Patch user

        Raises:
            BadRequestError: HTTP 400
            NotFoundError: HTTP 404
        """
        _path = _expand_path("/users/{id}", {"id": id})
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = {"id": id}
        _selector = "PATCH " + _path
        _request_meta = await self._client._stale_tracker.build_request_meta(_selector, _path, "PATCH")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = await _do_request_async(
            self._client._async_client, self._client._config, "PATCH", _url,
            headers=_headers, json=body, timeout=timeout,
            cancel_token=cancel_token, operation="PATCH /users/{id}",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            await self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                await self._client._stale_tracker.clear_stale(_selector, _path, "PATCH", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")


class _SyncUsersResource:
    def __init__(self, _client: "SDK") -> None:
        self._client = _client

    def create(self, body: UserCreateInput,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> User:
        """Create user

        Raises:
            BadRequestError: HTTP 400
            UnprocessableEntityError: HTTP 422
        """
        _path = "/users"
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = None
        _selector = "POST " + _path
        _request_meta = self._client._stale_tracker.build_request_meta(_selector, _path, "POST")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = _do_request_sync(
            self._client._sync_client, self._client._config, "POST", _url,
            headers=_headers, json=body, timeout=timeout,
            cancel_token=cancel_token, operation="POST /users",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                self._client._stale_tracker.clear_stale(_selector, _path, "POST", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")

    def delete(self, id: str,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> None:
        """Delete user

        Raises:
            NotFoundError: HTTP 404
        """
        _path = _expand_path("/users/{id}", {"id": id})
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = {"id": id}
        _selector = "DELETE " + _path
        _request_meta = self._client._stale_tracker.build_request_meta(_selector, _path, "DELETE")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = _do_request_sync(
            self._client._sync_client, self._client._config, "DELETE", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="DELETE /users/{id}",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                self._client._stale_tracker.clear_stale(_selector, _path, "DELETE", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "none")

    def get(self, id: str,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> User:
        """Get user by id

        Raises:
            NotFoundError: HTTP 404
        """
        _path = _expand_path("/users/{id}", {"id": id})
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = {"id": id}
        _selector = "GET " + _path
        _request_meta = self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = _do_request_sync(
            self._client._sync_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /users/{id}",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")

    def list(self,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> list[User]:
        """List users"""
        _path = "/users"
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = None
        _selector = "GET " + _path
        _request_meta = self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = _do_request_sync(
            self._client._sync_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /users",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")

    def update(self, id: str, body: UserPatchInput,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> User:
        """Patch user

        Raises:
            BadRequestError: HTTP 400
            NotFoundError: HTTP 404
        """
        _path = _expand_path("/users/{id}", {"id": id})
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = {"id": id}
        _selector = "PATCH " + _path
        _request_meta = self._client._stale_tracker.build_request_meta(_selector, _path, "PATCH")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = _do_request_sync(
            self._client._sync_client, self._client._config, "PATCH", _url,
            headers=_headers, json=body, timeout=timeout,
            cancel_token=cancel_token, operation="PATCH /users/{id}",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                self._client._stale_tracker.clear_stale(_selector, _path, "PATCH", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")


class SDK:
    def __init__(self, config: ClientConfig) -> None:
        self._config = config
        self._auth = _AuthState(config.bearer_token)
        self._sync_client = httpx.Client(
            transport=config.sync_transport,
        )
        _inv = config.invalidation
        self._stale_tracker = _StaleTrackerSync(
            stale_time=_inv.stale_time if _inv is not None else 0.0,
            stale_max_entries=(
                _inv.stale_max_entries if _inv is not None else 1000
            ),
            max_sources_per_target=(
                _inv.max_sources_per_target if _inv is not None else 16
            ),
        )
        self.users = _SyncUsersResource(self)

    def close(self) -> None:
        """Closes the underlying HTTP client."""
        self._sync_client.close()

    def is_stale(self, method: str, path: str) -> bool:
        """Returns True when (method, path) sits inside an active stale window."""
        return self._stale_tracker.is_stale(method, path)


class AsyncSDK:
    def __init__(self, config: ClientConfig) -> None:
        self._config = config
        self._auth = _AuthState(config.bearer_token)
        self._async_client = httpx.AsyncClient(
            transport=config.transport,
        )
        _inv = config.invalidation
        self._stale_tracker = _StaleTracker(
            stale_time=_inv.stale_time if _inv is not None else 0.0,
            stale_max_entries=(
                _inv.stale_max_entries if _inv is not None else 1000
            ),
            max_sources_per_target=(
                _inv.max_sources_per_target if _inv is not None else 16
            ),
        )
        self.users = _UsersResource(self)

    async def aclose(self) -> None:
        """Closes the underlying HTTP client."""
        await self._async_client.aclose()

    async def is_stale(self, method: str, path: str) -> bool:
        """Returns True when (method, path) sits inside an active stale window."""
        return await self._stale_tracker.is_stale(method, path)

"
`;

exports[`python-emitter byte-equivalence > crud client + types stable > crud types.py 1`] = `
"# ruff: noqa: E501
from __future__ import annotations

from typing import Literal, NotRequired, TypedDict

class ErrorEnvelope(TypedDict, total=False):
    error_key: str
    fields: dict[str, list[str]]
    message: str
    status: int
    status_key: str
    success: Literal[False]

class User(TypedDict, total=False):
    email: str
    id: str
    name: str

class UserCreateInput(TypedDict, total=False):
    email: str
    name: str

class UserPatchInput(TypedDict, total=False):
    email: NotRequired[str]
    name: NotRequired[str]


__all__ = ["ErrorEnvelope", "User", "UserCreateInput", "UserPatchInput"]
"
`;

exports[`python-emitter byte-equivalence > discriminated client + types stable > discriminated client.py 1`] = `
"# ruff: noqa: E501
from __future__ import annotations

import threading
import httpx
from typing import Any
from ._runtime import (
    ClientConfig,
    _AuthState,
    _build_headers,
    _build_url,
    _do_request_async,
    _do_request_sync,
    _expand_path,
    _parse_body,
    _raise_for_status,
)
from ._invalidation import (
    _StaleTracker,
    _StaleTrackerSync,
)
from .types import (
    Animal,
)

_INVALIDATION_MAP: dict[str, dict[str, Any]] = {
}

class _AnimalsResource:
    def __init__(self, _client: "AsyncSDK") -> None:
        self._client = _client

    async def get(self, id: str,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> Animal:
        """Get animal"""
        _path = _expand_path("/animals/{id}", {"id": id})
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = {"id": id}
        _selector = "GET " + _path
        _request_meta = await self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = await _do_request_async(
            self._client._async_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /animals/{id}",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            await self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                await self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")

    async def list(self,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> list[Animal]:
        """List animals"""
        _path = "/animals"
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = None
        _selector = "GET " + _path
        _request_meta = await self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = await _do_request_async(
            self._client._async_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /animals",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            await self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                await self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")


class _SyncAnimalsResource:
    def __init__(self, _client: "SDK") -> None:
        self._client = _client

    def get(self, id: str,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> Animal:
        """Get animal"""
        _path = _expand_path("/animals/{id}", {"id": id})
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = {"id": id}
        _selector = "GET " + _path
        _request_meta = self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = _do_request_sync(
            self._client._sync_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /animals/{id}",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")

    def list(self,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> list[Animal]:
        """List animals"""
        _path = "/animals"
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = None
        _selector = "GET " + _path
        _request_meta = self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = _do_request_sync(
            self._client._sync_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /animals",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")


class SDK:
    def __init__(self, config: ClientConfig) -> None:
        self._config = config
        self._auth = _AuthState(config.bearer_token)
        self._sync_client = httpx.Client(
            transport=config.sync_transport,
        )
        _inv = config.invalidation
        self._stale_tracker = _StaleTrackerSync(
            stale_time=_inv.stale_time if _inv is not None else 0.0,
            stale_max_entries=(
                _inv.stale_max_entries if _inv is not None else 1000
            ),
            max_sources_per_target=(
                _inv.max_sources_per_target if _inv is not None else 16
            ),
        )
        self.animals = _SyncAnimalsResource(self)

    def close(self) -> None:
        """Closes the underlying HTTP client."""
        self._sync_client.close()

    def is_stale(self, method: str, path: str) -> bool:
        """Returns True when (method, path) sits inside an active stale window."""
        return self._stale_tracker.is_stale(method, path)


class AsyncSDK:
    def __init__(self, config: ClientConfig) -> None:
        self._config = config
        self._auth = _AuthState(config.bearer_token)
        self._async_client = httpx.AsyncClient(
            transport=config.transport,
        )
        _inv = config.invalidation
        self._stale_tracker = _StaleTracker(
            stale_time=_inv.stale_time if _inv is not None else 0.0,
            stale_max_entries=(
                _inv.stale_max_entries if _inv is not None else 1000
            ),
            max_sources_per_target=(
                _inv.max_sources_per_target if _inv is not None else 16
            ),
        )
        self.animals = _AnimalsResource(self)

    async def aclose(self) -> None:
        """Closes the underlying HTTP client."""
        await self._async_client.aclose()

    async def is_stale(self, method: str, path: str) -> bool:
        """Returns True when (method, path) sits inside an active stale window."""
        return await self._stale_tracker.is_stale(method, path)

"
`;

exports[`python-emitter byte-equivalence > discriminated client + types stable > discriminated types.py 1`] = `
"# ruff: noqa: E501
from __future__ import annotations

from typing import Any, Literal, TypeAlias, TypedDict

Animal: TypeAlias = "Dog | Cat"

class Cat(TypedDict, total=False):
    indoor: bool
    kind: Literal["cat"]

class Dog(TypedDict, total=False):
    breed: str
    kind: Literal["dog"]


__all__ = ["Animal", "Cat", "Dog"]
"
`;

exports[`python-emitter byte-equivalence > invalidation client + types stable > invalidation client.py 1`] = `
"# ruff: noqa: E501
from __future__ import annotations

import threading
import httpx
from typing import Any
from ._runtime import (
    ClientConfig,
    _AuthState,
    _build_headers,
    _build_url,
    _do_request_async,
    _do_request_sync,
    _expand_path,
    _parse_body,
    _raise_for_status,
)
from ._invalidation import (
    _StaleTracker,
    _StaleTrackerSync,
)
from .types import (
    User,
    UserCreateInput,
)

_INVALIDATION_MAP: dict[str, dict[str, Any]] = {
    "users.create": {
        "method": "POST",
        "path": "/users",
        "invalidate": ["GET /users", "GET /users/:id"],
    },
}

class _UsersResource:
    def __init__(self, _client: "AsyncSDK") -> None:
        self._client = _client

    async def create(self, body: UserCreateInput,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> User:
        """Create user"""
        _path = "/users"
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = None
        _selector = "POST " + _path
        _request_meta = await self._client._stale_tracker.build_request_meta(_selector, _path, "POST")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = await _do_request_async(
            self._client._async_client, self._client._config, "POST", _url,
            headers=_headers, json=body, timeout=timeout,
            cancel_token=cancel_token, operation="POST /users",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            await self._client._stale_tracker.mark_stale(["GET /users", "GET /users/:id"], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                await self._client._stale_tracker.clear_stale(_selector, _path, "POST", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")

    async def get_by_id(self, id: str,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> User:
        """Get user by id"""
        _path = _expand_path("/users/{id}", {"id": id})
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = {"id": id}
        _selector = "GET " + _path
        _request_meta = await self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = await _do_request_async(
            self._client._async_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /users/{id}",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            await self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                await self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")

    async def list(self,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> list[User]:
        """List users"""
        _path = "/users"
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = None
        _selector = "GET " + _path
        _request_meta = await self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = await _do_request_async(
            self._client._async_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /users",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            await self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                await self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")


class _SyncUsersResource:
    def __init__(self, _client: "SDK") -> None:
        self._client = _client

    def create(self, body: UserCreateInput,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> User:
        """Create user"""
        _path = "/users"
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = None
        _selector = "POST " + _path
        _request_meta = self._client._stale_tracker.build_request_meta(_selector, _path, "POST")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = _do_request_sync(
            self._client._sync_client, self._client._config, "POST", _url,
            headers=_headers, json=body, timeout=timeout,
            cancel_token=cancel_token, operation="POST /users",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            self._client._stale_tracker.mark_stale(["GET /users", "GET /users/:id"], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                self._client._stale_tracker.clear_stale(_selector, _path, "POST", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")

    def get_by_id(self, id: str,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> User:
        """Get user by id"""
        _path = _expand_path("/users/{id}", {"id": id})
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = {"id": id}
        _selector = "GET " + _path
        _request_meta = self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = _do_request_sync(
            self._client._sync_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /users/{id}",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")

    def list(self,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> list[User]:
        """List users"""
        _path = "/users"
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = None
        _selector = "GET " + _path
        _request_meta = self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = _do_request_sync(
            self._client._sync_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /users",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")


class SDK:
    def __init__(self, config: ClientConfig) -> None:
        self._config = config
        self._auth = _AuthState(config.bearer_token)
        self._sync_client = httpx.Client(
            transport=config.sync_transport,
        )
        _inv = config.invalidation
        self._stale_tracker = _StaleTrackerSync(
            stale_time=_inv.stale_time if _inv is not None else 0.0,
            stale_max_entries=(
                _inv.stale_max_entries if _inv is not None else 1000
            ),
            max_sources_per_target=(
                _inv.max_sources_per_target if _inv is not None else 16
            ),
        )
        self.users = _SyncUsersResource(self)

    def close(self) -> None:
        """Closes the underlying HTTP client."""
        self._sync_client.close()

    def is_stale(self, method: str, path: str) -> bool:
        """Returns True when (method, path) sits inside an active stale window."""
        return self._stale_tracker.is_stale(method, path)


class AsyncSDK:
    def __init__(self, config: ClientConfig) -> None:
        self._config = config
        self._auth = _AuthState(config.bearer_token)
        self._async_client = httpx.AsyncClient(
            transport=config.transport,
        )
        _inv = config.invalidation
        self._stale_tracker = _StaleTracker(
            stale_time=_inv.stale_time if _inv is not None else 0.0,
            stale_max_entries=(
                _inv.stale_max_entries if _inv is not None else 1000
            ),
            max_sources_per_target=(
                _inv.max_sources_per_target if _inv is not None else 16
            ),
        )
        self.users = _UsersResource(self)

    async def aclose(self) -> None:
        """Closes the underlying HTTP client."""
        await self._async_client.aclose()

    async def is_stale(self, method: str, path: str) -> bool:
        """Returns True when (method, path) sits inside an active stale window."""
        return await self._stale_tracker.is_stale(method, path)

"
`;

exports[`python-emitter byte-equivalence > invalidation client + types stable > invalidation types.py 1`] = `
"# ruff: noqa: E501
from __future__ import annotations

from typing import TypedDict

class User(TypedDict, total=False):
    email: str
    id: str

class UserCreateInput(TypedDict, total=False):
    email: str


__all__ = ["User", "UserCreateInput"]
"
`;

exports[`python-emitter byte-equivalence > refs client + types stable > refs client.py 1`] = `
"# ruff: noqa: E501
from __future__ import annotations

import threading
import httpx
from typing import Any
from ._runtime import (
    ClientConfig,
    _AuthState,
    _build_headers,
    _build_url,
    _do_request_async,
    _do_request_sync,
    _expand_path,
    _parse_body,
    _raise_for_status,
)
from ._invalidation import (
    _StaleTracker,
    _StaleTrackerSync,
)
from .types import (
    Comment,
    User,
)

_INVALIDATION_MAP: dict[str, dict[str, Any]] = {
}

class _CommentsResource:
    def __init__(self, _client: "AsyncSDK") -> None:
        self._client = _client

    async def get(self, id: str,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> Comment:
        """Get comment with self-ref parent"""
        _path = _expand_path("/comments/{id}", {"id": id})
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = {"id": id}
        _selector = "GET " + _path
        _request_meta = await self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = await _do_request_async(
            self._client._async_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /comments/{id}",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            await self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                await self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")


class _UsersResource:
    def __init__(self, _client: "AsyncSDK") -> None:
        self._client = _client

    async def get(self, id: str,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> User:
        """Get user with comments"""
        _path = _expand_path("/users/{id}", {"id": id})
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = {"id": id}
        _selector = "GET " + _path
        _request_meta = await self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = await _do_request_async(
            self._client._async_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /users/{id}",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            await self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                await self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")


class _SyncCommentsResource:
    def __init__(self, _client: "SDK") -> None:
        self._client = _client

    def get(self, id: str,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> Comment:
        """Get comment with self-ref parent"""
        _path = _expand_path("/comments/{id}", {"id": id})
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = {"id": id}
        _selector = "GET " + _path
        _request_meta = self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = _do_request_sync(
            self._client._sync_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /comments/{id}",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")


class _SyncUsersResource:
    def __init__(self, _client: "SDK") -> None:
        self._client = _client

    def get(self, id: str,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> User:
        """Get user with comments"""
        _path = _expand_path("/users/{id}", {"id": id})
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = {"id": id}
        _selector = "GET " + _path
        _request_meta = self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = _do_request_sync(
            self._client._sync_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /users/{id}",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")


class SDK:
    def __init__(self, config: ClientConfig) -> None:
        self._config = config
        self._auth = _AuthState(config.bearer_token)
        self._sync_client = httpx.Client(
            transport=config.sync_transport,
        )
        _inv = config.invalidation
        self._stale_tracker = _StaleTrackerSync(
            stale_time=_inv.stale_time if _inv is not None else 0.0,
            stale_max_entries=(
                _inv.stale_max_entries if _inv is not None else 1000
            ),
            max_sources_per_target=(
                _inv.max_sources_per_target if _inv is not None else 16
            ),
        )
        self.comments = _SyncCommentsResource(self)
        self.users = _SyncUsersResource(self)

    def close(self) -> None:
        """Closes the underlying HTTP client."""
        self._sync_client.close()

    def is_stale(self, method: str, path: str) -> bool:
        """Returns True when (method, path) sits inside an active stale window."""
        return self._stale_tracker.is_stale(method, path)


class AsyncSDK:
    def __init__(self, config: ClientConfig) -> None:
        self._config = config
        self._auth = _AuthState(config.bearer_token)
        self._async_client = httpx.AsyncClient(
            transport=config.transport,
        )
        _inv = config.invalidation
        self._stale_tracker = _StaleTracker(
            stale_time=_inv.stale_time if _inv is not None else 0.0,
            stale_max_entries=(
                _inv.stale_max_entries if _inv is not None else 1000
            ),
            max_sources_per_target=(
                _inv.max_sources_per_target if _inv is not None else 16
            ),
        )
        self.comments = _CommentsResource(self)
        self.users = _UsersResource(self)

    async def aclose(self) -> None:
        """Closes the underlying HTTP client."""
        await self._async_client.aclose()

    async def is_stale(self, method: str, path: str) -> bool:
        """Returns True when (method, path) sits inside an active stale window."""
        return await self._stale_tracker.is_stale(method, path)

"
`;

exports[`python-emitter byte-equivalence > refs client + types stable > refs types.py 1`] = `
"# ruff: noqa: E501
from __future__ import annotations

from typing import NotRequired, TypedDict

class Comment(TypedDict, total=False):
    author: NotRequired[User]
    body: str
    id: str
    parent: NotRequired[Comment]

class User(TypedDict, total=False):
    comments: NotRequired[list[Comment]]
    email: str
    id: str


__all__ = ["Comment", "User"]
"
`;

exports[`python-emitter byte-equivalence > reserved-words client + types stable > reserved-words client.py 1`] = `
"# ruff: noqa: E501
from __future__ import annotations

import threading
import httpx
from typing import Any
from ._runtime import (
    ClientConfig,
    _AuthState,
    _build_headers,
    _build_url,
    _do_request_async,
    _do_request_sync,
    _parse_body,
    _raise_for_status,
)
from ._invalidation import (
    _StaleTracker,
    _StaleTrackerSync,
)
from .types import (
    AwaitYieldBody,
)

_INVALIDATION_MAP: dict[str, dict[str, Any]] = {
}

class _AwaitResource:
    def __init__(self, _client: "AsyncSDK") -> None:
        self._client = _client

    async def yield_(self, body: AwaitYieldBody,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> dict[str, Any]:
        """More reserved words as resource and action"""
        _path = "/await/yield"
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = None
        _selector = "POST " + _path
        _request_meta = await self._client._stale_tracker.build_request_meta(_selector, _path, "POST")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = await _do_request_async(
            self._client._async_client, self._client._config, "POST", _url,
            headers=_headers, json=body, timeout=timeout,
            cancel_token=cancel_token, operation="POST /await/yield",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            await self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                await self._client._stale_tracker.clear_stale(_selector, _path, "POST", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")


class _ClassResource:
    def __init__(self, _client: "AsyncSDK") -> None:
        self._client = _client

    async def from_(self,
        *,
        async_: bool | None = None,
        return_: str | None = None,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> str:
        """Both parts are Python reserved words"""
        _path = "/class/from"
        _params: dict[str, Any] = {"async": async_, "return": return_}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = None
        _selector = "GET " + _path
        _request_meta = await self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = await _do_request_async(
            self._client._async_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /class/from",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            await self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                await self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")


class _SyncAwaitResource:
    def __init__(self, _client: "SDK") -> None:
        self._client = _client

    def yield_(self, body: AwaitYieldBody,
        *,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> dict[str, Any]:
        """More reserved words as resource and action"""
        _path = "/await/yield"
        _params: dict[str, Any] = {}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = None
        _selector = "POST " + _path
        _request_meta = self._client._stale_tracker.build_request_meta(_selector, _path, "POST")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = _do_request_sync(
            self._client._sync_client, self._client._config, "POST", _url,
            headers=_headers, json=body, timeout=timeout,
            cancel_token=cancel_token, operation="POST /await/yield",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                self._client._stale_tracker.clear_stale(_selector, _path, "POST", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")


class _SyncClassResource:
    def __init__(self, _client: "SDK") -> None:
        self._client = _client

    def from_(self,
        *,
        async_: bool | None = None,
        return_: str | None = None,
        timeout: float | None = None,
        headers: dict[str, str] | None = None,
        cancel_token: "threading.Event | None" = None
    ) -> str:
        """Both parts are Python reserved words"""
        _path = "/class/from"
        _params: dict[str, Any] = {"async": async_, "return": return_}
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _path_params: dict[str, str] | None = None
        _selector = "GET " + _path
        _request_meta = self._client._stale_tracker.build_request_meta(_selector, _path, "GET")
        _url = _build_url(self._client._config.base_url, _path, _params)
        _response = _do_request_sync(
            self._client._sync_client, self._client._config, "GET", _url,
            headers=_headers, timeout=timeout,
            cancel_token=cancel_token, operation="GET /class/from",
            request_meta=_request_meta, auth=self._client._auth,
        )
        if 200 <= _response.status_code < 300:
            self._client._stale_tracker.mark_stale([], _path_params, _selector)
            if _request_meta is not None and _request_meta.is_stale:
                self._client._stale_tracker.clear_stale(_selector, _path, "GET", _request_meta.seq_snapshot)
        _raise_for_status(_response)
        return _parse_body(_response, "json")


class SDK:
    def __init__(self, config: ClientConfig) -> None:
        self._config = config
        self._auth = _AuthState(config.bearer_token)
        self._sync_client = httpx.Client(
            transport=config.sync_transport,
        )
        _inv = config.invalidation
        self._stale_tracker = _StaleTrackerSync(
            stale_time=_inv.stale_time if _inv is not None else 0.0,
            stale_max_entries=(
                _inv.stale_max_entries if _inv is not None else 1000
            ),
            max_sources_per_target=(
                _inv.max_sources_per_target if _inv is not None else 16
            ),
        )
        self.await_ = _SyncAwaitResource(self)
        self.class_ = _SyncClassResource(self)

    def close(self) -> None:
        """Closes the underlying HTTP client."""
        self._sync_client.close()

    def is_stale(self, method: str, path: str) -> bool:
        """Returns True when (method, path) sits inside an active stale window."""
        return self._stale_tracker.is_stale(method, path)


class AsyncSDK:
    def __init__(self, config: ClientConfig) -> None:
        self._config = config
        self._auth = _AuthState(config.bearer_token)
        self._async_client = httpx.AsyncClient(
            transport=config.transport,
        )
        _inv = config.invalidation
        self._stale_tracker = _StaleTracker(
            stale_time=_inv.stale_time if _inv is not None else 0.0,
            stale_max_entries=(
                _inv.stale_max_entries if _inv is not None else 1000
            ),
            max_sources_per_target=(
                _inv.max_sources_per_target if _inv is not None else 16
            ),
        )
        self.await_ = _AwaitResource(self)
        self.class_ = _ClassResource(self)

    async def aclose(self) -> None:
        """Closes the underlying HTTP client."""
        await self._async_client.aclose()

    async def is_stale(self, method: str, path: str) -> bool:
        """Returns True when (method, path) sits inside an active stale window."""
        return await self._stale_tracker.is_stale(method, path)

"
`;

exports[`python-emitter byte-equivalence > reserved-words client + types stable > reserved-words types.py 1`] = `
"# ruff: noqa: E501
from __future__ import annotations

from typing import NotRequired, TypedDict


AwaitYieldBody = TypedDict(
    "AwaitYieldBody",
    {
        "import": "str",
        "lambda": "NotRequired[int]",
    },
    total=False,
)

__all__ = ["AwaitYieldBody"]
"
`;

exports[`python-emitter byte-equivalence > sse client + types stable > sse client.py 1`] = `
"# ruff: noqa: E501
from __future__ import annotations

import httpx
from typing import Any, AsyncIterator
from ._runtime import (
    ClientConfig,
    _AuthState,
    _build_headers,
    _build_url,
    _open_stream,
)
from ._invalidation import (
    _StaleTracker,
    _StaleTrackerSync,
)
from ._sse import (
    SSEEvent,
    parse_sse_stream,
)

_INVALIDATION_MAP: dict[str, dict[str, Any]] = {
}

class _EventsResource:
    def __init__(self, _client: "AsyncSDK") -> None:
        self._client = _client

    async def stream(self,
        *,
        topic: str | None = None,
        last_event_id: str | None = None,
        headers: dict[str, str] | None = None
    ) -> AsyncIterator[SSEEvent]:
        """Stream events"""
        _path = "/events/stream"
        _params: dict[str, Any] = {"topic": topic}
        _extra: dict[str, str] = {"Accept": "text/event-stream"}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        if last_event_id is not None:
            _headers["Last-Event-ID"] = last_event_id
        _url = _build_url(self._client._config.base_url, _path, _params)
        async with _open_stream(self._client._async_client, self._client._config, "GET", _url, _headers) as _response:
            async for _event in parse_sse_stream(_response):
                yield _event


class SDK:
    def __init__(self, config: ClientConfig) -> None:
        self._config = config
        self._auth = _AuthState(config.bearer_token)
        self._sync_client = httpx.Client(
            transport=config.sync_transport,
        )
        _inv = config.invalidation
        self._stale_tracker = _StaleTrackerSync(
            stale_time=_inv.stale_time if _inv is not None else 0.0,
            stale_max_entries=(
                _inv.stale_max_entries if _inv is not None else 1000
            ),
            max_sources_per_target=(
                _inv.max_sources_per_target if _inv is not None else 16
            ),
        )

    def close(self) -> None:
        """Closes the underlying HTTP client."""
        self._sync_client.close()

    def is_stale(self, method: str, path: str) -> bool:
        """Returns True when (method, path) sits inside an active stale window."""
        return self._stale_tracker.is_stale(method, path)


class AsyncSDK:
    def __init__(self, config: ClientConfig) -> None:
        self._config = config
        self._auth = _AuthState(config.bearer_token)
        self._async_client = httpx.AsyncClient(
            transport=config.transport,
        )
        _inv = config.invalidation
        self._stale_tracker = _StaleTracker(
            stale_time=_inv.stale_time if _inv is not None else 0.0,
            stale_max_entries=(
                _inv.stale_max_entries if _inv is not None else 1000
            ),
            max_sources_per_target=(
                _inv.max_sources_per_target if _inv is not None else 16
            ),
        )
        self.events = _EventsResource(self)

    async def aclose(self) -> None:
        """Closes the underlying HTTP client."""
        await self._async_client.aclose()

    async def is_stale(self, method: str, path: str) -> bool:
        """Returns True when (method, path) sits inside an active stale window."""
        return await self._stale_tracker.is_stale(method, path)

"
`;

exports[`python-emitter byte-equivalence > sse client + types stable > sse types.py 1`] = `
"# ruff: noqa: E501
from __future__ import annotations



__all__: list[str] = []
"
`;

exports[`python-emitter byte-equivalence > ws client + types stable > ws client.py 1`] = `
"# ruff: noqa: E501
from __future__ import annotations

import httpx
from typing import Any
from ._runtime import (
    ClientConfig,
    _AuthState,
    _build_headers,
    _build_url,
    _to_ws_url,
)
from ._invalidation import (
    _StaleTracker,
    _StaleTrackerSync,
)
from ._ws import (
    _TypedWebSocket,
)

_INVALIDATION_MAP: dict[str, dict[str, Any]] = {
}

class _RealtimeResource:
    def __init__(self, _client: "AsyncSDK") -> None:
        self._client = _client

    def subscribe(self, channel: str,
        *,
        reconnect_token2: str | None = None,
        protocols: list[str] | None = None,
        reconnect_token: str | None = None,
        headers: dict[str, str] | None = None
    ) -> _TypedWebSocket:
        """Subscribe to realtime updates"""
        _path = "/realtime/subscribe"
        _params: dict[str, Any] = {"channel": channel, "reconnect_token": reconnect_token2}
        if reconnect_token is not None:
            _params["reconnect_token"] = reconnect_token
        _extra: dict[str, str] = {}
        _extra.update(headers or {})
        _headers = _build_headers(self._client._config, extra=_extra, bearer_token=self._client._auth.token)
        _url = _build_url(self._client._config.base_url, _path, _params)
        _ws_url = _to_ws_url(_url)
        return _TypedWebSocket(_ws_url, protocols=protocols, extra_headers=_headers)


class SDK:
    def __init__(self, config: ClientConfig) -> None:
        self._config = config
        self._auth = _AuthState(config.bearer_token)
        self._sync_client = httpx.Client(
            transport=config.sync_transport,
        )
        _inv = config.invalidation
        self._stale_tracker = _StaleTrackerSync(
            stale_time=_inv.stale_time if _inv is not None else 0.0,
            stale_max_entries=(
                _inv.stale_max_entries if _inv is not None else 1000
            ),
            max_sources_per_target=(
                _inv.max_sources_per_target if _inv is not None else 16
            ),
        )

    def close(self) -> None:
        """Closes the underlying HTTP client."""
        self._sync_client.close()

    def is_stale(self, method: str, path: str) -> bool:
        """Returns True when (method, path) sits inside an active stale window."""
        return self._stale_tracker.is_stale(method, path)


class AsyncSDK:
    def __init__(self, config: ClientConfig) -> None:
        self._config = config
        self._auth = _AuthState(config.bearer_token)
        self._async_client = httpx.AsyncClient(
            transport=config.transport,
        )
        _inv = config.invalidation
        self._stale_tracker = _StaleTracker(
            stale_time=_inv.stale_time if _inv is not None else 0.0,
            stale_max_entries=(
                _inv.stale_max_entries if _inv is not None else 1000
            ),
            max_sources_per_target=(
                _inv.max_sources_per_target if _inv is not None else 16
            ),
        )
        self.realtime = _RealtimeResource(self)

    async def aclose(self) -> None:
        """Closes the underlying HTTP client."""
        await self._async_client.aclose()

    async def is_stale(self, method: str, path: str) -> bool:
        """Returns True when (method, path) sits inside an active stale window."""
        return await self._stale_tracker.is_stale(method, path)

"
`;

exports[`python-emitter byte-equivalence > ws client + types stable > ws types.py 1`] = `
"# ruff: noqa: E501
from __future__ import annotations



__all__: list[str] = []
"
`;
